--- a/BookingAndReservationApi/BookingAndReservationApi/appsettings.json
+++ b/BookingAndReservationApi/BookingAndReservationApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433; Database=bookingandreservation; User Id = sa; Password = Beqa2004; TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
